Correct Swift call; tweak help text

--- a/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
+++ b/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
@@ -51,6 +51,12 @@
             ReferencedContainer = "container:dlist.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--help"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
