Add build bumper

--- a/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
+++ b/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
@@ -81,5 +81,23 @@
    <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
+      <PostActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "./bumpbuild.sh&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "3BF2DC592D50C07E00520F48"
+                     BuildableName = "dlist"
+                     BlueprintName = "dlist"
+                     ReferencedContainer = "container:dlist.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PostActions>
    </ArchiveAction>
 </Scheme>
