Get (and optionally present) more device info

--- a/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
+++ b/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
@@ -56,6 +56,14 @@
             argument = "--help"
             isEnabled = "NO">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--info"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-a TESTO"
+            isEnabled = "NO">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
