--- a/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
+++ b/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
@@ -54,7 +54,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "--help"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--info"
