--- a/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
+++ b/dlist.xcodeproj/xcshareddata/xcschemes/dlist.xcscheme
@@ -54,11 +54,11 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "--help"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--info"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-a TESTO"
