--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,9 @@ playground.xcworkspace
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
-
+.swiftpm
 .build/
+Package.resolved
 
 # CocoaPods
 #
